--- a/style.css
+++ b/style.css
@@ -13,67 +13,77 @@ html {
 }
 
 body {
-    height: 100vh;
-    width:100vw;
     margin: 0;
+    padding: 0;
+}
+
+.chat_content {
     background-color: #F8F8F8;
-    display: flex;
-    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 .chat_head {
     background-color: #8E24AA;
     width: 100%;
-    position: fixed;
+    position: sticky;
     top: 0;
-    height: 12%;
+    height: 160px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    padding-top: 40px;
+    padding: 20px;
+    margin: 0;
 }
-.arrow_button, .search, .more_features {
+
+a {
+    text-decoration: none;
+}
+
+.arrow_button .material-icons, .search .material-icons, .more_features .material-icons {
     background-color: #8E24AA;
     color:white;
     border: none;
-    flex-grow: 1;
-    margin: 0 4px;
+    flex-grow: 2;
+    padding: 0 20px;
 }
 
 .material-icons { 
-    font-size: 72px; 
+    font-size: 60px;
 }
 
 .user_account {
-    margin-left: 20px;
+    margin-left: 40px;
     display: flex;
     flex-direction: row;
     flex-grow: 4;
-    height: 50%;
-    vertical-align: middle;
     justify-content: space-around;
 }
 
 .user_photo {
-    flex-grow: 2;
-    margin-left: 20px;
+    flex: 1 1 auto;
+    padding: 0 20px;
 }
 
 img {
-    height: 100%;
-    width: auto;
+    height: 120px;
+    width: 120px;
     overflow: hidden;
     border-radius: 50%;
 }
 
 .user_info {
+    height: 70%;
     display: flex;
     flex-direction: column;
-    flex-grow: 5;
+    flex: 4 1 auto;
     justify-content: center;
     align-items: flex-start;
-    margin: 0 8px;
+    align-self: center;
+    padding: 0;
 }
 
 .user_name, .user_last_visit {
@@ -83,21 +93,27 @@ img {
 }
 
 .user_name {
-    font-size: 3.75rem;
+    font-size: 50px;
     font-weight: 400;
 }
 
 .user_last_visit {
-    font-size: 2.5rem;
+    font-size: 35px;
     font-weight: 100;
     opacity: 45%;
     margin-top: 2px;
 }
 
+.form {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .messages {
     background-color: #F8F8F8;
     width: 100%;
-    margin: 26% 0 14% 0;
     padding: 4px;
     display: flex;
     flex-direction: column;
@@ -113,15 +129,14 @@ img {
 
 .my_message, .opponent_message {
     max-width: 75%;
-    border: 1px solid #D0C8D2;
+    border: 2px solid #D0C8D2;
     border-radius: 6px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    align-self: flex-end;
     margin: 10px;
     padding: 20px 20px 5px 20px;
-    min-height: 8%;
+    min-height: 120px;
     justify-content: space-around;
     overflow-wrap: break-word;
     flex-wrap: wrap;
@@ -135,7 +150,7 @@ img {
 
 .content_of_message {
     width: 100%;
-    font-size: 3rem;
+    font-size: 40px;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 500;
     color: black;
@@ -143,7 +158,7 @@ img {
 }
 
 .time_of_message {
-    font-size: 2.3rem;
+    font-size: 25px;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 600;
     color: rgba(0, 0, 0, 0.4);
@@ -159,14 +174,15 @@ img {
 }
 
 .message_check .material-icons { 
-    font-size: 2.5rem; 
+    font-size: 35px; 
     font-weight: 600;
     color: #8E24AA;
 }
 
 .text_field {
-    padding: 4% 0;
+    padding: 4px 0;
     width: 100%;
+    height: 120px;
     border-top: 1px solid #D0C8D2;
     vertical-align: middle;
     bottom: 0;
@@ -175,13 +191,13 @@ img {
     background-color: white;
     align-items: center;
     justify-content: space-between;
-    position: fixed;
+    position: sticky;
     bottom: 0;
 }
 
 input[type=text] {
     height: 100%;
-    font-size: 3rem;
+    font-size: 40px;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 400;
     line-height: 20px;
@@ -190,7 +206,7 @@ input[type=text] {
 }
 
 ::placeholder {
-    font-size: 3rem;
+    font-size: 40px;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 600;
     line-height: 20px;
@@ -217,3 +233,153 @@ input {
     margin-right: 4%;
 }
 
+.chats_list {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.menu .material-icons, .search_chat .material-icons{
+    background-color: #8E24AA;
+    color:white;
+    border: none;
+    flex-grow: 1;
+    padding: 0 20px;
+}
+
+.app_name {
+    font-size: 60px;
+    color: white;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    flex-grow: 6;
+    margin-left: 40px;
+}
+
+.chats {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    margin: 0;
+    padding: 0;
+}
+
+.chat {
+    background-color: white;
+    align-self: flex-start;
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+
+    width: 100%;
+    margin: 0;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.chat_photo {
+    padding-left: 30px;
+    margin: 0;
+    flex-grow: 1;
+}
+
+.chat_info {
+    height: 100%;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    border-bottom: 4px solid #E6E6E6;
+    margin: 0;
+    padding: 10px 0;
+}
+
+.chat_info_text {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 5;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0;
+
+}
+
+.chat_name, .last_message {
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: normal;
+    width: 100%;
+    margin: 5px 0;
+}
+
+.chat_name {
+    color: black;
+    font-size: 45px;  
+}
+
+.last_message {
+    color: #B3B3B3;
+    font-size: 40px;
+}
+
+.time_and_status {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    padding-right: 30px;
+    padding-top: 20px;
+}
+
+.message_time {
+    font-size: 35px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    color: #B3B3B3;
+}
+
+.chat_status .material-icons {
+    font-size: 52px; 
+    font-weight: 400;
+    color: #8E24AA;
+    padding: 0;
+    margin-top: 10px;
+}
+
+.chat_status_unread, .chat_status_mentioned {
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    font-size: 35px;
+    margin-top: 10px;
+    padding: 8px 16px;
+    border-radius: 25px;
+}
+
+.chat_status_unread {
+    background-color: #8E24AA;
+    color: white;
+}
+
+.chat_status_mentioned {
+    background-color: #F9D667;
+    color: black;
+}
+
+.create_chat .material-icons {
+    font-size: 68px;
+    color: #72612E;
+    background-color: #F9D667;
+    border-radius: 50%;
+    padding: 40px;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    box-shadow: 7px 12px 15px #BABABA;
+}
