--- a/my-project/simple-chat/src/css/index.css
+++ b/my-project/simple-chat/src/css/index.css
@@ -15,6 +15,8 @@ html {
 body {
     margin: 0;
     padding: 0;
+    height: 100%;
+    width: 100%;
 }
 
 .chat_content {
@@ -195,7 +197,7 @@ img {
 }
 
 input[type=text] {
-    height: 100%;
+
     font-size: 40px;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 400;
