--- a/my-project/simple-chat/src/css/index.css
+++ b/my-project/simple-chat/src/css/index.css
@@ -257,7 +257,7 @@ input[type=text] {
     font-weight: 400;
     line-height: 20px;
     flex-grow: 10;
-    margin-left: 4%
+    margin-left: 8px;
 }
 
 ::placeholder {
