--- a/style.css
+++ b/style.css
@@ -30,15 +30,14 @@ body {
 .chat_head {
     background-color: #8E24AA;
     width: 100%;
-    position: fixed;
-    z-index: 1;
+    position: sticky;
     top: 0;
-    height: 80px;
+    height: 160px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    padding: 10px;
+    padding: 20px;
     margin: 0;
 }
 
@@ -46,76 +45,34 @@ a {
     text-decoration: none;
 }
 
-.arrow_button .material-icons, .search .material-icons, .more_features .material-icons, .attach .material-icons {
+.arrow_button .material-icons, .search .material-icons, .more_features .material-icons {
     background-color: #8E24AA;
     color:white;
     border: none;
-    flex-grow: 1;
-    flex-shrink: 3;
-    padding: 6px;
-    height: 40px;
-    width: 40px;
-    margin: 4px;
-    border-radius: 50%;
-    transition: background-color 0.5s, color 0.5s;
+    flex-grow: 2;
+    padding: 0 20px;
 }
-
-
-.arrow_button .material-icons:hover, .search .material-icons:hover, .more_features .material-icons:hover {
-    background-color: #dda1ee;
-    color: #8E24AA;
-    animation: pulse 2s infinite;
-}
-
-
-@keyframes pulse {
-    0% {
-      -moz-box-shadow: 0 0 0 0 rgba(221, 161, 238, .4);
-      box-shadow: 0 0 0 0 rgba(221, 161, 238, .4);
-    }
-    70% {
-        -moz-box-shadow: 0 0 0 10px rgba(221, 161, 238, 0);
-        box-shadow: 0 0 0 10px rgba(221, 161, 238, 0);
-    }
-    100% {
-        -moz-box-shadow: 0 0 0 0 rgba(221, 161, 238, 0);
-        box-shadow: 0 0 0 0 rgba(221, 161, 238, 0);
-    }
-}
-
-
-.arrow_button .material-icons:active, .search .material-icons:active, .more_features .material-icons:active {
-    animation: none;
-    background-color: #F3E5F5;
-    color: #8E24AA;
-}
-
 
 .material-icons { 
-    font-size: 28px;
+    font-size: 60px;
 }
 
-
 .user_account {
-    margin-left: 10px;
+    margin-left: 40px;
     display: flex;
     flex-direction: row;
-    flex-grow: 3;
-    flex-shrink: 1;
+    flex-grow: 4;
     justify-content: space-around;
-    align-items: center;
 }
 
 .user_photo {
-    flex: 1 40 auto;
-    padding: 0 10px 0 20px;
+    flex: 1 1 auto;
+    padding: 0 20px;
 }
 
 img {
-    height: 40px;
-    width: 40px;
-    padding: 0;
-    margin: 0;
+    height: 120px;
+    width: 120px;
     overflow: hidden;
     border-radius: 50%;
 }
@@ -124,7 +81,7 @@ img {
     height: 70%;
     display: flex;
     flex-direction: column;
-    flex: 40 1 auto;
+    flex: 4 1 auto;
     justify-content: center;
     align-items: flex-start;
     align-self: center;
@@ -138,18 +95,19 @@ img {
 }
 
 .user_name {
-    font-size: 25px;
+    font-size: 50px;
     font-weight: 400;
 }
 
 .user_last_visit {
-    font-size: 15px;
+    font-size: 35px;
     font-weight: 100;
     opacity: 45%;
     margin-top: 2px;
 }
 
 .form {
+    height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -157,10 +115,8 @@ img {
 
 .messages {
     background-color: #F8F8F8;
-    height: min-content;
     width: 100%;
-    border: none;
-    padding: 82px 4px 62px;
+    padding: 4px 4px 124px;
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
@@ -169,18 +125,7 @@ img {
 .my_message {
     background-color: #F3E5F5;
     align-self: flex-end;
-    animation-name: slideright, pulse;
-    animation-duration: 1.5s, 2s;
-}
-
-@keyframes slideright {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 100%;
-        -moz-box-shadow: 0 0 0 0 rgba(221, 161, 238, 0);
-    }
+    padding: 20px 20px 5px 20px;
 }
 
 .my_message, .opponent_message {
@@ -190,10 +135,10 @@ img {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    margin: 2px;
-    padding: 10px 10px 2px 10px;
-    min-height: 60px;
-    justify-content: space-between;
+    margin: 10px;
+    padding: 20px 20px 5px 20px;
+    min-height: 120px;
+    justify-content: space-around;
     overflow-wrap: break-word;
     flex-wrap: wrap;
     width: max-content;
@@ -201,47 +146,46 @@ img {
 .opponent_message {
     background-color:white;
     align-self: flex-start;
-    animation: slideleft 1s;
+    padding: 20px 20px 5px 20px;
 }
 
 .content_of_message {
     width: 100%;
-    font-size: 20px;
+    font-size: 40px;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 500;
     color: black;
-    margin: 2px 2px 4px 2px;
+    margin: 2px 2px 8px 2px;
 }
 
 .time_of_message {
-    font-size: 12px;
+    font-size: 25px;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 600;
     color: rgba(0, 0, 0, 0.4);
-    margin-right: 4px;
+    margin-right: 8px;
 }
 
 .time_and_check {
-    height: 16px;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    margin-top: 4px;
-    align-items: center;
+    margin-top: 8px;
 }
 
 .message_check .material-icons { 
-    font-size: 16px; 
+    font-size: 35px; 
+    font-weight: 600;
     color: #8E24AA;
-    padding-top: 3px;
 }
 
 .text_field {
     padding: 4px 0;
     width: 100%;
-    height: 60px;
+    height: 120px;
     border-top: 1px solid #D0C8D2;
+    vertical-align: middle;
     bottom: 0;
     display: flex;
     flex-direction: row;
@@ -249,19 +193,21 @@ img {
     align-items: center;
     justify-content: space-between;
     position: fixed;
+    bottom: 0;
 }
 
 input[type=text] {
-    font-size: 20px;
+
+    font-size: 40px;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 400;
     line-height: 20px;
     flex-grow: 10;
-    margin-left: 8px;
+    margin-left: 4%
 }
 
 ::placeholder {
-    font-size: 20px;
+    font-size: 40px;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 600;
     line-height: 20px;
@@ -279,22 +225,13 @@ input {
     width: calc(100% - 2px);
 }
 
-.attach .material-icons {
+.attach {
     background-color: white;
+    border: none;
     flex-grow: 2;
-    color: #999999;
-}
-
-
-.attach .material-icons:hover {
-    background-color: #d0cdcd;
-    color: white;
-}
-
-
-.attach .material-icons:active {
-    background-color: #999999;
-    color: white;
+    font-weight: 400;
+    opacity: 40%;
+    margin-right: 4%;
 }
 
 .chats_list {
@@ -304,47 +241,12 @@ input {
     padding: 0;
 }
 
-
-.menu .material-icons, .search_chat .material-icons {
+.menu .material-icons, .search_chat .material-icons{
     background-color: #8E24AA;
     color:white;
     border: none;
-    height: 80px;
-    width: 80px;
-    border-radius: 50%;
     flex-grow: 1;
-    padding: 10px;
-    transition: background-color .5s, color .5s;
-}
-
-
-.menu .material-icons:hover, .search_chat .material-icons:hover {
-    background-color: #dda1ee;
-    color: #8E24AA;
-    animation: pulse 2s infinite;
-}
-
-
-@keyframes pulse {
-    0% {
-        -moz-box-shadow: 0 0 0 0 rgba(221, 161, 238, .4);
-        box-shadow: 0 0 0 0 rgba(221, 161, 238, .4);
-    }
-    70% {
-        -moz-box-shadow: 0 0 0 10px rgba(221, 161, 238, 0);
-        box-shadow: 0 0 0 10px rgba(221, 161, 238, 0);
-    }
-    100% {
-        -moz-box-shadow: 0 0 0 0 rgba(221, 161, 238, 0);
-        box-shadow: 0 0 0 0 rgba(221, 161, 238, 0);
-    }
-}
-
-
-.menu .material-icons:active, .search_chat .material-icons:active {
-    animation: none;
-    background-color: #F3E5F5;
-    color: #8E24AA;
+    padding: 0 20px;
 }
 
 .app_name {
@@ -362,7 +264,7 @@ input {
     flex-direction: column;
     overflow-y: scroll;
     margin: 0;
-    padding: 164px 0 0;
+    padding: 0;
 }
 
 .chat {
@@ -371,26 +273,15 @@ input {
     display: flex;
     flex-direction: row;
     padding: 0;
-    height: 160px;
+
     width: 100%;
     margin: 0;
     justify-content: space-between;
     align-items: center;
-    transition: background-color .5s;
-}
-
-
-.chat:hover {
-    background-color: #E6E6E6;
-}
-
-.chat:active {
-    background-color: #F3E5F5;
-
 }
 
 .chat_photo {
-    padding: 0 20px;
+    padding-left: 30px;
     margin: 0;
     flex-grow: 1;
 }
@@ -403,7 +294,6 @@ input {
     border-bottom: 4px solid #E6E6E6;
     margin: 0;
     padding: 10px 0;
-    justify-content: space-between;
 }
 
 .chat_info_text {
@@ -447,7 +337,6 @@ input {
     justify-content: center;
     padding-right: 30px;
     padding-top: 20px;
-    right: 0;
 }
 
 .message_time {
@@ -494,13 +383,4 @@ input {
     bottom: 50px;
     right: 50px;
     box-shadow: 7px 12px 15px #BABABA;
-    transition: box-shadow .5s;
-}
-
-.create_chat .material-icons:hover {
-    box-shadow: 12px 17px 15px #c0950a;
-}
-
-.create_chat .material-icons:active {
-    box-shadow: 12px 17px 15px #c0950a;
 }
