--- a/my-project/simple-chat/src/css/chat_list.css
+++ b/my-project/simple-chat/src/css/chat_list.css
@@ -10,11 +10,12 @@
     background-color: #8E24AA;
     color:white;
     border: none;
-    height: 80px;
-    width: 80px;
     border-radius: 50%;
-    flex-grow: 1;
-    padding: 10px;
+    flex: 1 6 auto;
+    padding: 6px;
+    height: 40px;
+    width: 40px;
+    margin: 4px;
     transition: background-color .5s, color .5s;
 }
 
@@ -49,12 +50,12 @@
 }
 
 .app_name {
-    font-size: 60px;
+    font-size: 25px;
     color: white;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 400;
-    flex-grow: 6;
-    margin-left: 40px;
+    flex: 6 1 auto;
+    margin-left: 20px;
 }
 
 .chats {
@@ -63,7 +64,7 @@
     flex-direction: column;
     overflow-y: scroll;
     margin: 0;
-    padding: 164px 0 0;
+    padding: 82px 0 0;
 }
 
 .chat {
@@ -72,7 +73,7 @@
     display: flex;
     flex-direction: row;
     padding: 0;
-    height: 160px;
+    height: 70px;
     width: 100%;
     margin: 0;
     justify-content: space-between;
@@ -91,9 +92,9 @@
 }
 
 .chat_photo {
-    padding: 0 20px;
+    padding: 0 10px;
     margin: 0;
-    flex-grow: 1;
+    flex: 1 6 auto;
 }
 
 .chat_info {
@@ -101,77 +102,81 @@
     width: 80%;
     display: flex;
     flex-direction: row;
-    border-bottom: 4px solid #E6E6E6;
+    border-bottom: 2px solid #E6E6E6;
     margin: 0;
-    padding: 10px 0;
+    padding: 5px 0;
     justify-content: space-between;
+    flex: 6 1 auto;
 }
 
 .chat_info_text {
     height: 100%;
-    width: 50%;
+    width: 70%;
     display: flex;
     flex-direction: column;
-    flex-grow: 5;
+    flex: 5 1 auto;
     justify-content: center;
-    align-items: flex-start;
+    align-items: flex-end;
     padding: 0;
 
 }
 
 .chat_name, .last_message {
     font-family: Helvetica, Arial, sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     line-height: normal;
     width: 100%;
-    margin: 5px 0;
+    margin: 3px 0;
 }
 
 .chat_name {
     color: black;
-    font-size: 45px;  
+    font-size: 20px;  
 }
 
 .last_message {
     color: #B3B3B3;
-    font-size: 40px;
+    font-size: 17px;
 }
 
 .time_and_status {
-    flex-grow: 1;
+    flex: 1 6 auto;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
-    padding-right: 30px;
-    padding-top: 20px;
+    padding-right: 15px;
+    padding-top: 8px;
     right: 0;
 }
 
 .message_time {
-    font-size: 35px;
+    font-size: 15px;
     font-family: Helvetica, Arial, sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     color: #B3B3B3;
 }
 
 .chat_status .material-icons {
-    font-size: 52px; 
+    font-size: 20px; 
     font-weight: 400;
     color: #8E24AA;
     padding: 0;
-    margin-top: 10px;
+    margin-top: 6px;
+    height: 24px;
+    width: 24px;
+    padding: 2px;
 }
 
 .chat_status_unread, .chat_status_mentioned {
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 400;
-    font-size: 35px;
-    margin-top: 10px;
-    padding: 8px 16px;
+    font-size: 16px;
+    margin-top: 6px;
+    padding: 2px 6px;
     border-radius: 25px;
 }
 
@@ -186,20 +191,23 @@
 }
 
 .create_chat .material-icons {
-    font-size: 68px;
+    font-size: 28px;
     color: #72612E;
     background-color: #F9D667;
     border-radius: 50%;
-    padding: 40px;
+    padding: 16px;
     position: fixed;
-    bottom: 50px;
-    right: 50px;
-    box-shadow: 7px 12px 15px #BABABA;
+    bottom: 20px;
+    right: 20px;
+    height: 60px;
+    width: 60px;
+    margin: 4px;
+    box-shadow: 3px 6px 7px #BABABA;
     transition: box-shadow .5s;
 }
 
 .create_chat .material-icons:hover {
-    box-shadow: 12px 17px 15px #c0950a;
+    box-shadow: 6px 12px 14px #c0950a;
 }
 
 .create_chat .material-icons:active {
