--- a/react-chat/src/App.css
+++ b/react-chat/src/App.css
@@ -4,6 +4,7 @@ html {
     width: 100vw;
     margin: 0;
     padding: 0;
+    background-color: white;
 }
 
 *,
@@ -17,5 +18,5 @@ body {
     padding: 0;
     height: 100%;
     width: 100%;
-    background-color: #F8F8F8;
+    background-color: white;
 }
