--- a/react-chat/src/components/Message/Message.scss
+++ b/react-chat/src/components/Message/Message.scss
@@ -11,7 +11,7 @@
     }
     to {
         opacity: 100%;
-        -moz-box-shadow: 0 0 0 0 rgba(221, 161, 238, 0);
+        box-shadow: 0 0 0 0 rgba(221, 161, 238, 0);
     }
 }
 
