--- a/react-chat/src/components/Chat/Chat.scss
+++ b/react-chat/src/components/Chat/Chat.scss
@@ -84,6 +84,10 @@
     right: 0;
 }
 
+.chat_status {
+    margin-top: 6px;
+}
+
 .message_time {
     font-size: 15px;
     font-family: Helvetica, Arial, sans-serif;
@@ -95,7 +99,7 @@
     font-weight: 400;
     color: #8E24AA;
     padding: 0;
-    margin-top: 6px;
+    margin-top: 8px;
     height: 24px;
     width: 24px;
     padding: 2px;
@@ -105,7 +109,7 @@
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 400;
     font-size: 16px;
-    margin-top: 6px;
+    margin-top: 8px;
     padding: 2px 6px;
     border-radius: 25px;
 }
