--- a/react-chat/src/components/Message/Message.scss
+++ b/react-chat/src/components/Message/Message.scss
@@ -1,11 +1,11 @@
 .my_message {
     background-color: #F3E5F5;
     align-self: flex-end;
-    animation-name: slideright, pulse;
+    animation-name: appearing, pulse;
     animation-duration: 1.5s, 2s;
 }
 
-@keyframes slideright {
+@keyframes appearing {
     from {
         opacity: 0;
     }
@@ -23,7 +23,7 @@
     flex-direction: column;
     align-items: flex-end;
     margin: 2px;
-    padding: 10px 10px 2px 10px;
+    padding: 6px 10px 2px 6px;
     min-height: 60px;
     justify-content: space-between;
     overflow-wrap: break-word;
@@ -33,7 +33,8 @@
 .opponent_message {
     background-color:white;
     align-self: flex-start;
-    animation: slideleft 1s;
+    animation-name: appearing, pulse;
+    animation-duration: 1.5s, 2s;
 }
 
 .content_of_message {
@@ -42,7 +43,7 @@
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 500;
     color: black;
-    margin: 2px 2px 4px 2px;
+    margin: 2px 0 4px 2px;
 }
 
 .time_of_message {
@@ -50,7 +51,7 @@
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 600;
     color: rgba(0, 0, 0, 0.4);
-    margin-right: 4px;
+    margin-right: 2px;
 }
 
 .time_and_check {
@@ -67,4 +68,12 @@
     color: #8E24AA;
     padding-top: 3px;
     font-size: 12px;
+}
+
+.author {
+    color: #8E24AA;
+    font-size: 12px;
+    margin-right: 2px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 600;
 }
