--- a/exam/src/pages/GeneralPage/GeneralPage.scss
+++ b/exam/src/pages/GeneralPage/GeneralPage.scss
@@ -10,7 +10,7 @@
     border-radius: 8px;
     border: solid 1px grey;
     width: calc(100% - 60px);
-    margin: 30px;
+    margin: 100px 30px 30px;
     align-self: center;
     height: 100px;
 }
@@ -77,4 +77,11 @@ input[type=text] {
     height: 60px;
     width: 60px;
     margin: 20px;
+}
+
+.select_languages {
+    height: 50px;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
 }
