--- a/exam/src/components/Header/Header.scss
+++ b/exam/src/components/Header/Header.scss
@@ -1,7 +1,7 @@
 .head {
     color: gray;
     font-size: 28px;
-    margin: 20px;
-    flex-grow: 10;
-
+    margin-top: 20px;
+    flex-grow: 6;
+    margin-left: 20px;
 }
