--- a/exam/src/pages/GeneralPage/GeneralPage.scss
+++ b/exam/src/pages/GeneralPage/GeneralPage.scss
@@ -1,22 +1,22 @@
-.generalPage {
+.general_page {
     background-color: white;
     height: 100vh;
-    width: 100%;
     margin: 0;
-    padding: 0;
+    width: calc(100% - 40px);
+    padding: 20px;
 }
 
 .translate_field {
     border-radius: 8px;
     border: solid 1px grey;
-    width: calc(100% - 60px);
-    margin: 100px 30px 30px;
+    width: 100%;
+    margin: 40px 0;
     align-self: center;
-    height: 100px;
+    height: 18%;
 }
 
 .languages {
-    height: 20px;
+    height: 22px;
     width: 100%;
     border-bottom: solid 1px black;
 }
@@ -25,7 +25,8 @@ input[type=text] {
     //height: calc(100% - 20px);
     border: 0;
     outline: none;
-    
+    overflow-y: scroll;
+    font-size: 16px;
 }
 
 .form {
@@ -47,6 +48,8 @@ input[type=text] {
     border-left: solid 1px black;
     height: 100%;
     padding: 0 4px;
+    overflow-y: scroll;
+    font-size: 16px;
 }
 
 .history_button {
@@ -77,7 +80,6 @@ input[type=text] {
     padding: 0;
     height: 60px;
     width: 60px;
-    margin: 20px;
 }
 
 .select_languages {
@@ -85,4 +87,8 @@ input[type=text] {
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
+}
+
+a {
+    text-decoration: none;
 }
