--- a/exam/src/pages/History/History.scss
+++ b/exam/src/pages/History/History.scss
@@ -1,35 +1,41 @@
 .history_page {
-    height: 100%;
-    width: 100%;
+    background-color: white;
+    height: 100vh;
     margin: 0;
-    padding: 0;
+    width: calc(100% - 40px);
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
 
+
 .history_head {
-    width: 100%;
+    width: calc(100% - 40px);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     position: fixed;
-    top: 0;
+    top: 20px;
 }
 
 .arrow_button {
-    flex-grow: 1;
-    padding: 4px;
-    color: #1B73E8; 
+    flex-grow: 0.5;
+    color: #1B73E8;
+    padding: 0;
+    height: 36px;
+    width: 36px;
+    margin: 0; 
 }
 
 .arrow {
-    color: #1B73E8;
     border-radius: 50%;
-    padding: 10px;
+    background-color: #EAF0FC;
+    color: #1B73E8;
+    padding: 8px;
     height: 40px;
     width: 40px;
-    margin: 6px;
+    margin-top: 14px;
 }
 
 .arrow:active {
