--- a/exam/src/pages/GeneralPage/GeneralPage.scss
+++ b/exam/src/pages/GeneralPage/GeneralPage.scss
@@ -12,7 +12,7 @@
     width: 100%;
     margin: 40px 0;
     align-self: center;
-    height: 18%;
+    height: 20%;
 }
 
 .languages {
@@ -39,14 +39,14 @@ input[type=text] {
     flex-grow: 1;
     width: 50%;
     padding: 0 4px;
-    height: 100%;
+    height: calc(100% - 2px);
 }
 
 .form-output {
     flex-grow: 1;
     width: 50%;
     border-left: solid 1px black;
-    height: 100%;
+    height: calc(100% - 2px);
     padding: 0 4px;
     overflow-y: scroll;
     font-size: 16px;
@@ -91,4 +91,10 @@ input[type=text] {
 
 a {
     text-decoration: none;
+}
+
+.arrow_down {
+    height: 100%;
+    width: 50px;
+    margin-left: 30px;
 }
