--- a/exam/src/pages/GeneralPage/GeneralPage.scss
+++ b/exam/src/pages/GeneralPage/GeneralPage.scss
@@ -1,8 +1,8 @@
 .general_page {
     background-color: white;
-    height: 100vh;
+    height: 100%;
     margin: 0;
-    width: calc(100% - 40px);
+    //width: 100%;
     padding: 20px;
 }
 
@@ -12,21 +12,32 @@
     width: 100%;
     margin: 40px 0;
     align-self: center;
-    height: 20%;
+    height: 100px;
 }
 
 .languages {
     height: 22px;
-    width: 100%;
-    border-bottom: solid 1px black;
+    width: calc(100% - 3px);
+    border-bottom: solid 1px grey;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 2px;
 }
 
 input[type=text] {
     //height: calc(100% - 20px);
+    padding: 0;
     border: 0;
     outline: none;
     overflow-y: scroll;
     font-size: 16px;
+    margin: 2px;
+    width: calc(100% - 4px);
+}
+
+.output {
+    margin: 2px;
 }
 
 .form {
@@ -38,16 +49,16 @@ input[type=text] {
 .form-input {
     flex-grow: 1;
     width: 50%;
-    padding: 0 4px;
+    //padding: 0 4px;
     height: calc(100% - 2px);
 }
 
 .form-output {
     flex-grow: 1;
     width: 50%;
-    border-left: solid 1px black;
-    height: calc(100% - 2px);
-    padding: 0 4px;
+    border-left: solid 1px grey;
+    height: calc(100% - 6px);
+    //padding: 0 4px;
     overflow-y: scroll;
     font-size: 16px;
 }
@@ -93,12 +104,17 @@ a {
     text-decoration: none;
 }
 
-//.arrow_down {
-//    height: 100%;
-//    width: 50px;
-//    margin-left: 30px;
-//}
+select {
+    width: 80px;
+    //flex-grow: 1;
+    margin: 0 20px;
+}
+
+option {
+    width: 40px;
+}
 
 .switch {
-    margin: 2px calc(50% - 8px); 
+    //flex-grow: 2;
+    margin-left: 12.5;
 }
