--- a/react-chat/src/components/Form/Form.scss
+++ b/react-chat/src/components/Form/Form.scss
@@ -16,7 +16,8 @@ form {
     background-color: white;
     display: flex;
     flex-direction: row;
-    border-top: 1px solid #D0C8D2; 
+    border-top: 1px solid #D0C8D2;
+    justify-content: space-between; 
 }
 
 .form_preview {
@@ -27,7 +28,7 @@ form {
     height: min-content;
 }
 
-.images_preview {
+.preview {
     background-color:rgba(142, 36, 170, 0.6);
     border-radius: 6px;
     height: min-content;
@@ -35,22 +36,16 @@ form {
     margin: 0;
     display: flex;
     flex-direction: row;
-}
-
-.form_text {
-    flex-grow: 100;
-    height: 100%;
-    margin: 0;
-    background-color: white;
-    display: flex;
-    flex-direction: row;
+    width: 100%;
     justify-content: space-between;
 }
+
 
 .form_messages {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
 }
 
@@ -58,8 +53,6 @@ form {
     padding: 4px 0;
     height: 100%;
     width: 90%;
-    display: flex;
-    flex-direction: row;
     background-color: white;
     flex-grow: 100;
     align-items: center;
@@ -77,7 +70,7 @@ form {
     padding: 4px 0;
     background-color: white;
     height: 100%;
-    align-self: center;
+    align-items: center;
 }
 
 
@@ -88,7 +81,8 @@ form {
     line-height: 20px;
     flex-grow: 10;
     margin-left: 8px;
-    margin-top: 12px;
+    margin-top: 14px;
+    padding: 0;
 }
 
 ::placeholder {
@@ -119,7 +113,7 @@ input[type=text] {
     padding: 6px;
     height: 40px;
     width: 40px;
-    margin: 4px;
+    margin: calc(50% - 18px) 4px;
     align-self: center;
     transition: background-color .5s, color .5s;
 }
@@ -142,11 +136,26 @@ input[type=text] {
     width: 90px;
     margin: 4px;
     padding: 0;
-    align-self: center;
+}
+
+.downloaded_audio {
+    margin: 4px;
 }
 
 .img_field {
     margin: 4px;
     height: 90px;
+    padding: 0;
+}
+
+
+.drag {
+    height: 120px;
+    border: dashed 4px rgba(142, 36, 170, 0.6);
+}
+
+.cancel {
+    color: white;
+    margin: 2px 4px;
     padding: 0;
 }
